<resources>
    <string name="app_name">TinderShoppingApp</string>
    <string name="step_1_4">Step 1/4</string>
    <string name="t_shirts">T-Shirts</string>
    <string name="jeans">Jeans</string>
    <string name="jackets">Jackets</string>
    <string name="shirts">Shirts</string>
    <string name="step_2_4">Step 2/4</string>
    <string name="textview">TextView</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="step_3_4">Step 3/4</string>
    <string name="buy">Buy</string>
</resources>