<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6F9F1"
    tools:context=".activities.ThirdPage">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:text="@string/price"
        android:textColor="#C21C1B1B"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="Price"
        android:textColor="#1C1B1B"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginRight="@dimen/_10ssp"
        android:text="@string/quantity"
        android:textColor="#C21C1B1B"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toStartOf="@+id/inputQuantity"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_280sdp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvBar"
        app:srcCompat="@drawable/shirt" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBar"
        android:layout_width="@dimen/_269sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="100dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvProgress"
            android:layout_width="236dp"
            android:layout_height="@dimen/_35sdp"
            app:cardBackgroundColor="@android:color/holo_green_light"
            app:cardCornerRadius="100dp"
            app:cardElevation="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:text="@string/step_3_4"
            android:translationZ="90dp"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="167dp"
            tools:layout_editor_absoluteY="76dp" />
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btnBuy"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/buy"
        android:textColor="#000000"
        android:textSize="34sp"
        app:cornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/newBtn"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="116dp"
        android:backgroundTint="#FFFFFF"
        android:shadowColor="#000000"
        android:shadowDx="80"
        android:shadowDy="80"
        android:text="New"
        android:textColor="#000000"
        android:textSize="34sp"
        app:cornerRadius="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <NumberPicker
        android:id="@+id/inputQuantity"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnBuy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>